# sw_catcher

./: .gitignore  Cargo.toml  bootstrap.sh  config.toml
src/: actions.rs  clipboard.rs  config.rs  keyphrase.rs  lib.rs  logging.rs  main.rs  meta_processor.rs  text_processing.rs  watcher.rs
